# is-goto-harmful

./: .gitignore  CMakeLists.txt  MIT_LICENSE  README.md
include/: encoder.h  hash.h  hash_goto.h  int_encoder.h  map.h  map_goto.h  structs.h
src/: hash.c  hello.c  int_encoder.cpp  main.c  main.cpp  map.c
src-goto/: hash_goto.c  hello.c  main.c  map_goto.c
tests/: hashtest.c  maptest.c
